add note for CMS GC tuning